# ScrapeFandom

./: .gitignore  README.md  ScrapeFandom.py  json2jsonl.py  json2txt.py  pypoject.toml  pyproject.toml  requirements.txt  run-me.sh
src/: scrapefandom.py
